--- a/.github/workflows/update-configs.yml
+++ b/.github/workflows/update-configs.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
-        with: python-version: '3.11'
+        with:
+          python-version: '3.11'
       - run: pip install -r requirements.txt
       - name: رمزگشایی session
         if: success()
