--- a/.github/workflows/update-configs.yml
+++ b/.github/workflows/update-configs.yml
@@ -1,4 +1,4 @@
-name: جمع‌آوری VLESS
+name: جمع‌آوری خودکار کانفیگ VLESS
 
 on:
   workflow_dispatch:
@@ -6,27 +6,21 @@ on:
     - cron: '0 */6 * * *'
 
 jobs:
-  fetch:
+  fetch-configs:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
-        with: python-version: '3.11'
-      - run: pip install -r requirements.txt
-      - name: رمزگشایی session
-        if: success()
+      - name: کلون کردن ریپو
+        uses: actions/checkout@v4
+
+      - name: نصب پایتون
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: نصب وابستگی‌ها
         run: |
-          if [ -f session.session.enc ]; then
-            python -c "
-import os
-from cryptography.fernet import Fernet
-key = os.getenv('SESSION_DECRYPT_KEY').encode()
-with open('session.session.enc', 'rb') as f: data = f.read()
-cipher = Fernet(key)
-with open('session.session', 'wb') as f: f.write(cipher.decrypt(data))
-print('✅ session آماده شد.')
-"
-          fi
+          pip install -r requirements.txt
+
       - name: اجرای اسکریپت
         env:
           API_ID: ${{ secrets.API_ID }}
