--- a/.github/workflows/update-configs.yml
+++ b/.github/workflows/update-configs.yml
@@ -19,28 +19,36 @@ jobs:
 
       - name: نصب وابستگی‌های پایتون
         run: |
+          pip install --upgrade pip
           pip install -r requirements.txt
+          pip install cryptography telethon requests
 
       - name: نصب v2ray-core
         run: |
           wget -O v2ray.zip https://github.com/v2fly/v2ray-core/releases/latest/download/v2ray-linux-64.zip
-          unzip v2ray.zip
-          sudo mv v2ray v2ctl /usr/local/bin/
+          unzip v2ray.zip -d v2ray
+          sudo mv v2ray/v2ray v2ray/v2ctl /usr/local/bin/
           sudo chmod +x /usr/local/bin/v2ray /usr/local/bin/v2ctl
           v2ray -version
 
-      - name: رمزگشایی session (اگر داری)
-        if: success() && exists('session.session.enc')
+      - name: رمزگشایی session
+        env:
+          SESSION_DECRYPT_KEY: ${{ secrets.SESSION_DECRYPT_KEY }}
         run: |
-          python -c "
-import os
-from cryptography.fernet import Fernet
-key = os.getenv('SESSION_DECRYPT_KEY').encode()
-with open('session.session.enc', 'rb') as f: data = f.read()
-cipher = Fernet(key)
-with open('session.session', 'wb') as f: f.write(cipher.decrypt(data))
-print('✅ session.session ایجاد شد.')
-"
+          if [ -f session.session.enc ]; then
+            echo "import os" > decrypt_session.py
+            echo "from cryptography.fernet import Fernet" >> decrypt_session.py
+            echo "key = os.getenv('SESSION_DECRYPT_KEY')" >> decrypt_session.py
+            echo "if not key: raise ValueError('❌ SESSION_DECRYPT_KEY در secrets تنظیم نشده است.')" >> decrypt_session.py
+            echo "key = key.encode()" >> decrypt_session.py
+            echo "with open('session.session.enc', 'rb') as f: data = f.read()" >> decrypt_session.py
+            echo "cipher = Fernet(key)" >> decrypt_session.py
+            echo "with open('session.session', 'wb') as f: f.write(cipher.decrypt(data))" >> decrypt_session.py
+            echo "print('✅ فایل session.session با موفقیت ایجاد شد.')" >> decrypt_session.py
+            python decrypt_session.py
+          else
+            echo "⚠️ فایل session.session.enc یافت نشد."
+          fi
 
       - name: اجرای اسکریپت
         env:
@@ -52,4 +60,5 @@ print('✅ session.session ایجاد شد.')
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GH_FILE_PATH: ${{ secrets.GH_FILE_PATH }}
           CHANNELS: ${{ secrets.CHANNELS }}
-        run: python fetch_configs.py
+        run: |
+          python fetch_configs.py
