--- a/.github/workflows/update-configs.yml
+++ b/.github/workflows/update-configs.yml
@@ -29,7 +29,7 @@ jobs:
           unzip v2ray.zip
           sudo mv v2ray /usr/local/bin/v2ray
           sudo chmod +x /usr/local/bin/v2ray
-          v2ray -version
+          v2ray version
 
       - name: رمزگشایی session
         env:
